Fixed hero section overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ body {
   color: var(--dark);
   background: var(--light);
 }
-section {
+section:not(.hero) {
   padding: 64px 0;
 }
 a {
